@@ -1017,6 +1017,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-8686. WebHdfsFileSystem#getXAttr(Path p, final String name) doesn't
     work if namespace is in capitals (kanaka kumar avvaru via vinayakumarb)
 
+    HDFS-8642. Make TestFileTruncate more reliable. (Rakesh R via
+    Arpit Agarwal)
+
 Release 2.7.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
